tandem and pari reducible for seminars

--- a/config/locales/de/active_record.yml
+++ b/config/locales/de/active_record.yml
@@ -165,6 +165,8 @@ de:
         external_booking_address: Externe Buchung über
         printed_pages: Seiten im Bildungskalender
         pre_booking_weeks: Frühbucher-Rabatt (Wochen vorher)
+        tandem_reducible: Tandem-Rabatt
+        pari_reducible: PARITÄTER-Rabatt
       teacher:
         seminars: Seminare
         skill_sets: Fachbereiche
