new role and updated permissions

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -99,6 +99,7 @@ de:
       user:     Benutzer*in
       cms_admin: CMS-Administrator*in
       finance:   Finanzen
+      trainee: Praktikant*in
   delete: Löschen
   edit: Bearbeiten
   copy: Kopieren
