JSON API for categories and seminars

--- a/config/locales/de/rails.yml
+++ b/config/locales/de/rails.yml
@@ -240,3 +240,5 @@ de:
     uploads:
       new:
         title: "Neuer Upload"
+  seminars:
+    pre_bookable_text: "10%-Frühbucher-Rabatt bei Anmeldung bis %{weeks} Wochen vor Seminar-Beginn"
