external booking for part 2

--- a/config/locales/de/views.yml
+++ b/config/locales/de/views.yml
@@ -89,3 +89,16 @@ de:
       data_protection: 'Hiermit bestätige ich, die Informationen zur <a href="/daten" target="_blank">Erhebung
           meiner personenbezogenen Daten nach § 13 DSGVO</a> zur Kenntnis genommen zu haben.'
       school: Schule
+  bookings:
+    new:
+      title: Neue Anmeldung
+      error: Anmeldung konnte nicht gespeichert werden. Bitte überprüfen Sie die markierten Felder.
+      member: Mitglied im PARITÄTISCHEN LSA
+      member_institution: Einrichtung des PARITÄTISCHEN LSA
+      graduate: Absolvent*in der Fachschule
+      terms_of_service: 'Hiermit erkenne ich die
+          <a href="/agbs" target="_blank">Allgemeinen Geschäftsbedingungen</a>
+          des PARITÄTISCHEN Bildungswerkes LSA an.'
+      data_protection: 'Hiermit bestätige ich, die Informationen zur <a href="/daten" target="_blank">Erhebung
+          meiner personenbezogenen Daten nach § 13 DSGVO</a> zur Kenntnis genommen zu haben.'
+      school: Schule
