add bookable_until to seminars

--- a/config/locales/de/active_record.yml
+++ b/config/locales/de/active_record.yml
@@ -144,6 +144,7 @@ de:
         slug: URL-ID
       seminar:
         bookings: Anmeldungen
+        bookable_until: Anmeldung möglich bis
         date_text: Termine (Text)
         invoices: Rechnungen
         editing_finished_at: Bearbeitung fertiggestellt
