change iban and fix gem dependencies error

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -82,7 +82,7 @@ de:
         Rechnungsnummer auf das Konto:
 
         <b>Bank für Sozialwirtschaft Magdeburg
-        IBAN: DE30810205000007419401
+        IBAN: DE63 3702 0500 0007 4194 01
         SWIFT/BIC: BFSWDE33MAG</b>
 
         Mit freundlichen Grüßen
