change bic and bank name

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -81,9 +81,9 @@ de:
         Bitte überweisen Sie den Gesamtbetrag innerhalb von 7 Tagen auf unser Konto mit Angabe der
         Rechnungsnummer auf das Konto:
 
-        <b>Bank für Sozialwirtschaft Magdeburg
+        <b>Bank für Sozialwirtschaft
         IBAN: DE63 3702 0500 0007 4194 01
-        SWIFT/BIC: BFSWDE33MAG</b>
+        SWIFT/BIC: BFSWDE33XXX</b>
 
         Mit freundlichen Grüßen
 
